crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__tuple_struct_nested_tuple_struct_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Outer, UserId).unwrap()"
---
? namespace: ROOT
  name: Inner
: NEWTYPESTRUCT:
    - TYPENAME:
        namespace: ROOT
        name: UserId
    - []
? namespace: ROOT
  name: Outer
: TUPLESTRUCT:
    - - TYPENAME:
          namespace: ROOT
          name: Inner
      - U32
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
