crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__tuple_struct_option_transparent_proxy_respects_field_namespace.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Holder, UserId).unwrap()"
---
? namespace: ROOT
  name: Holder
: NEWTYPESTRUCT:
    - OPTION:
        TYPENAME:
          namespace:
            NAMED: wire
          name: UserId
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
