crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__tuple_struct_three_fields_proxy_middle.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Triple, UserId).unwrap()"
---
? namespace: ROOT
  name: Triple
: TUPLESTRUCT:
    - - U8
      - TYPENAME:
          namespace: ROOT
          name: UserId
      - U32
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
