crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__tuple_variant_skip_one_opaque_proxy_one_normal.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Pair:
          - TUPLE:
              - U32
              - TYPENAME:
                  namespace: ROOT
                  name: UserId
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
