crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__vec_option_transparent_wrapper_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Holder, UserId).unwrap()"
---
? namespace: ROOT
  name: Holder
: STRUCT:
    - - maybe_users:
          - SEQ:
              OPTION:
                TYPENAME:
                  namespace: ROOT
                  name: UserId
          - []
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
